k8s/03-mailbox/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scratchy-mailbox
  namespace: scratchy-ns
spec:
  replicas: 1
  minReadySeconds: 15
  selector:
    matchLabels:
      app: scratchy-mailbox-label
  template:
    metadata:
      labels:
        app: scratchy-mailbox-label
    spec:
      restartPolicy: Always
      containers:
        - name: scratchy-mailbox
          image: "mailhog/mailhog:latest"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 20m
              memory: 32Mi
            requests:
              cpu: 10m
              memory: 16Mi
